remove hint from question

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
         explanation: "Operacja logarytmowania skaluje harmoniczne w sposób uwypuklający ich 'okresowość' w widmie, a także umożliwia oddzielenie źródła (drgań wiązadeł głosowych lub szumu) od filtrów modelujących trakt artykulacyjny. Jest to możliwe, ponieważ splot sygnałów w dziedzinie czasu staje się mnożeniem w dziedzinie częstotliwości, a logarytm iloczynu jest sumą logarytmów, co 'rozplątuje' splot."
       },
       {
-        question: "Które zadanie biometryczne polega na sprawdzaniu, czy dana osoba jest tą, za którą się podaje (potwierdzenie tożsamości)?",
+        question: "Które zadanie biometryczne polega na sprawdzaniu, czy dana osoba jest tą, za którą się podaje?",
         options: ["Wyszukiwanie danej osoby w bazie danych (1:N)", "Sprawdzanie z listą osób (1:N)", "Potwierdzanie tożsamości (1:1)", "Ustalanie cech fizycznych"],
         correct: 2,
         explanation: "Potwierdzanie tożsamości to sprawdzenie, czy osoba jest tą, za którą się podaje, co jest zadaniem typu 1:1. Zadania typu 1:N to ustalanie tożsamości lub sprawdzanie z listą."
